--- a/about.html
+++ b/about.html
@@ -2,15 +2,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-   <meta charset="utf-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <!--    CSS   -->
-   <link rel="stylesheet" href="css/bootstrap.css">
-   <link rel="stylesheet" href="css/style.css">
-   <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
-   <title>Medical HTML Theme</title>
-</head>
+   <head>
+      <meta charset="utf-8">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <!--    CSS   -->
+      <link rel="stylesheet" href="css/bootstrap.css">
+      <link rel="stylesheet" href="css/style.css">
+      <link rel="stylesheet" href="css/fontello.css">
+      <link rel="stylesheet" href="css/reset.css">
+      <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto:300,400" rel="stylesheet">
+      <title>Medical HTML Theme</title>
+   </head>
 
 <body>
    <!--       header      -->
@@ -18,51 +20,55 @@
       <div class="container">
          <div class="col-md-12">
             <div class="row">
-               <div class="col-md-1">
-                  <p>Have any questions?</p>
+               <div class="col-md-9">
+                  <ul class="contactbar">
+                     <li><h6 class="small">Have any questions?</h6></li>
+                     <li><h6 class="small"><i class="icon-phone"></i> <span>+43 435 345 234</span></h6></li>
+                     <li><h6 class="small"><i class="icon-mail"></i> <span>ask@medical.com</span></h6></li>
+                  </ul>
                </div>
-               <div class="col-md-1">
-                  <p>+43 433 234 345</p>
-               </div>
-               <div class="col-md-1">
-                  <p>askanything@medica.com</p>
-               </div>
-               <div class="col-md-5"></div>
-               <div class="col-md-4">
+
+
+
+
+               <div class="col-md-3 social">
                   <ul class="socialmedia">
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
-                     <li></li>
+                     <li><i class="icon-facebook"></i></li>
+                     <li><i class="icon-gplus"></i></li>
+                     <li><i class="icon-youtube"></i></li>
+                     <li><i class="icon-twitter"></i></li>
+                     <li><i class="icon-vimeo"></i></li>
+                     <li><i class="icon-pinterest"></i></li>
+                     <li><i class="icon-linkedin"></i></li>
                      <li></li>
                   </ul>
                </div>
             </div>
          </div>
          <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#">North Medica</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#"><img src="img/logo.JPG" alt="">&nbsp;North Medica</a>
             <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                   <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
                   <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
-                  <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
+                  <li class="nav-item"> <a class="nav-link" href="#">Disabled</a> </li>
                </ul>
                <form class="form-inline my-2 my-lg-0">
                   <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  <button class="btn btn-outline my-2 my-sm-0" type="submit">Search</button>
                </form>
             </div>
          </nav>
+      </div>
+      <section class="breadcrumbrs">
          <div class="row">
             <div class="col-md-2">
-               <h2>About</h2></div>
+               <h2>About Us</h2></div>
             <div class="col-md-2">Home / About Us </div>
             <div class="col-md-8"></div>
          </div>
-      </div>
+      </section>
+
    </div>
       <!--       /header      -->
 
@@ -71,106 +77,120 @@
       <!--       section       -->
 
 
-<div class="container">
-   <div class="row">
-      <div class="col-md-4"><h2>Lorem ipsum.</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi error, in animi soluta doloribus cum.</p>
-      <p>Nam adipisci ullam repudiandae tenetur laboriosam aspernatur, dicta culpa neque odio dolores, ut, esse aperiam.</p></div>
-      <div class="col-md-4"><h2>Lorem ipsum.</h2>
+<section class="aboutus">
+   <div class="container">
+      <div class="row">
+         <div class="col-md-4"><h2>Lorem ipsum.</h2>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi error, in animi soluta doloribus cum.</p>
+         <br>
          <p>Nam adipisci ullam repudiandae tenetur laboriosam aspernatur, dicta culpa neque odio dolores, ut, esse aperiam.</p></div>
-      <div class="col-md-4"><h2>Lorem ipsum.</h2>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi error, in animi soluta doloribus cum.</p>
-         <p>Nam adipisci ullam repudiandae tenetur laboriosam aspernatur, dicta culpa neque odio dolores, ut, esse aperiam.</p></div>
+         <div class="col-md-4"><h2>Lorem ipsum.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi error, in animi soluta doloribus cum.</p>
+            <br>
+            <p>Nam adipisci ullam repudiandae tenetur laboriosam aspernatur, dicta culpa neque odio dolores, ut, esse aperiam.</p></div>
+         <div class="col-md-4"><h2>Lorem ipsum.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi error, in animi soluta doloribus cum.</p>
+            <br>
+            <p>Nam adipisci ullam repudiandae tenetur laboriosam aspernatur, dicta culpa neque odio dolores, ut, esse aperiam.</p></div>
+      </div>
    </div>
-</div>
+</section>
 
 
    <!--       section       -->
 
-<div class="container">
-   <div class="col-md-12">SEPARATOR</div>
-</div>
+<section class="separator">
+   <div class="container">
+      <div class="col-md-12"><i class="icon-dot-3"></i></div>
+   </div>
+</section>
 
 
       <!--       section       -->
 
 
-<div class="container">
-   <h2>Welcome to our Clinic</h2>
-   <div class="image6"></div>
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae magni, dolor, iste doloremque, nemo earum cumque expedita porro, fuga molestiae laboriosam quaerat.</p>
-</div>
-
-
-
-   <!--       section       -->
-
-
-<div class="container">
-   <div class="row">
-      <div class="col-md-3">
-         <div class="icon3"> <i class="ion-medkit"></i> </div>
-         <h5>234</h5>
-         <h4>Lorem ipsum.</h4> </div>
-      <div class="col-md-3">
-         <div class="icon3"> <i class="ion-medkit"></i> </div>
-         <h5>234</h5>
-         <h4>Lorem ipsum.</h4> </div>
-      <div class="col-md-3">
-         <div class="icon3"> <i class="ion-medkit"></i> </div>
-         <h5>234</h5>
-         <h4>Lorem ipsum.</h4> </div>
+<section class="welcome"><div class="container">
+      <h2>Welcome to our Clinic</h2>
+      <div class="image6"></div>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Vitae magni, dolor, iste doloremque, nemo earum cumque expedita porro, fuga molestiae laboriosam quaerat.</p>
    </div>
-</div>
+   </section>
+
 
    <!--       section       -->
 
-<div class="container">
-   <div class="row">
-      <div class="col-md-6"></div>
-      <div class="col-md-6">
-         <h2>Lorem ipsum dolor sit amet.</h2>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum vel, voluptas nesciunt facere autem in quia. Quam minima placeat similique, quos temporibus sit. Doloremque consequun praesentium culpa eaque ratione placeat nihil quam deleniti. Soluta quod quidem in quaerat explicabo quas debitis sequi sunt.</p>
-         <p>Read more</p>
+
+<section class="factors">
+   <div class="container">
+      <div class="row">
+         <div class="col-md-3">
+            <div class="icon3"> <i class="icon-user-md"></i> </div>
+            <h5>234</h5>
+            <h4>Lorem ipsum.</h4> </div>
+         <div class="col-md-3">
+            <div class="icon3"> <i class="icon-bed"></i> </div>
+            <h5>234</h5>
+            <h4>Lorem ipsum.</h4> </div>
+         <div class="col-md-3">
+            <div class="icon3"> <i class="icon-award"></i> </div>
+            <h5>234</h5>
+            <h4>Lorem ipsum.</h4> </div>
+         <div class="col-md-3">
+            <div class="icon3"> <i class="icon-calendar-plus-o"></i> </div>
+            <h5>23334</h5>
+            <h4>Lorem ipsum.</h4> </div>
       </div>
    </div>
-</div>
-<div class="container">
-   <div class="row">
-      <div class="col-md-6">
-         <h2>Lorem ipsum dolor sit amet.</h2>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum vel, voluptas nesciunt facere autem in quia. Quam minima placeat similique, quos temporibus sit. Doloremque consequun praesentium culpa eaque ratione placeat nihil quam deleniti. Soluta quod quidem in quaerat explicabo quas debitis sequi sunt.</p>
-         <p>Read more</p>
-      </div>
-      <div class="col-md-6"></div>
-   </div>
-</div>
+</section>
 
+   <!--       section       -->
+
+<section class="details">
+     <div class="container">
+      <div class="row">
+         <div class="col-md-6"></div>
+         <div class="col-md-6">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum vel, voluptas nesciunt facere autem in quia. Quam minima placeat similique, quos temporibus sit. Doloremque consequun praesentium culpa eaque ratione placeat nihil quam deleniti. Soluta quod quidem in quaerat explicabo quas debitis sequi sunt.</p>
+            <p>Read more</p>
+         </div>
+      </div>
+   </div>
+   <div class="container">
+      <div class="row">
+         <div class="col-md-6">
+            <h2>Lorem ipsum dolor sit amet.</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsum vel, voluptas nesciunt facere autem in quia. Quam minima placeat similique, quos temporibus sit. Doloremque consequun praesentium culpa eaque ratione placeat nihil quam deleniti. Soluta quod quidem in quaerat explicabo quas debitis sequi sunt.</p>
+            <p>Read more</p>
+         </div>
+         <div class="col-md-6"></div>
+      </div>
+   </div>
+   </section>
 
    <!--       section       -->
 
 
 
-
+   <footer>
       <div class="container-fluid">
          <div class="row">
-            <div class="col-md-9"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, commodi!</p></div>
-            <div class="col-md-9">
+            <div class="col-md-5"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span>Culpa, commodi!</span></p></div>
+            <div class="col-md-4">
                <ul class="socialmedia3">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
+                  <li><i class="icon-facebook"></i></li>
+                  <li><i class="icon-gplus"></i></li>
+                  <li><i class="icon-youtube"></i></li>
+                  <li><i class="icon-twitter"></i></li>
+                  <li><i class="icon-vimeo"></i></li>
+                  <li><i class="icon-pinterest"></i></li>
+                  <li><i class="icon-linkedin"></i></li>
                </ul>
             </div>
          </div>
       </div>
 
+   </footer>
 
 
 
