--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,9 @@
       <!--    CSS   -->
       <link rel="stylesheet" href="css/bootstrap.css">
       <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+      <link rel="stylesheet" href="css/fontello.css">
+      <link rel="stylesheet" href="css/reset.css">
+      <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto:300,400" rel="stylesheet">
       <title>Medical HTML Theme</title>
    </head>
 
@@ -18,51 +20,55 @@
          <div class="container">
             <div class="col-md-12">
                <div class="row">
-                  <div class="col-md-1">
-                     <p>Have any questions?</p>
+                  <div class="col-md-9">
+                     <ul class="contactbar">
+                        <li><h6 class="small">Have any questions?</h6></li>
+                        <li><h6 class="small"><i class="icon-phone"></i> <span>+43 435 345 234</span></h6></li>
+                        <li><h6 class="small"><i class="icon-mail"></i> <span>ask@medical.com</span></h6></li>
+                     </ul>
                   </div>
-                  <div class="col-md-1">
-                     <p>+43 433 234 345</p>
-                  </div>
-                  <div class="col-md-1">
-                     <p>askanything@medica.com</p>
-                  </div>
-                  <div class="col-md-5"></div>
-                  <div class="col-md-4">
+
+
+
+
+                  <div class="col-md-3 social">
                      <ul class="socialmedia">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><i class="icon-facebook"></i></li>
+                        <li><i class="icon-gplus"></i></li>
+                        <li><i class="icon-youtube"></i></li>
+                        <li><i class="icon-twitter"></i></li>
+                        <li><i class="icon-vimeo"></i></li>
+                        <li><i class="icon-pinterest"></i></li>
+                        <li><i class="icon-linkedin"></i></li>
                         <li></li>
                      </ul>
                   </div>
                </div>
             </div>
             <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#">North Medica</a>
+               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#"><img src="img/logo.JPG" alt="">&nbsp;North Medica</a>
                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
                      <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
-                     <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
+                     <li class="nav-item"> <a class="nav-link" href="#">Disabled</a> </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                     <button class="btn btn-outline my-2 my-sm-0" type="submit">Search</button>
                   </form>
                </div>
             </nav>
+         </div>
+         <section class="breadcrumbrs">
             <div class="row">
                <div class="col-md-2">
-                  <h2>About</h2></div>
-               <div class="col-md-2">Home / About Us </div>
+                  <h2>Contact</h2></div>
+               <div class="col-md-2">Home / Contact </div>
                <div class="col-md-8"></div>
             </div>
-         </div>
+         </section>
+
       </div>
       <!--       /header      -->
 
@@ -71,37 +77,36 @@
       <!--       section       -->
 
 <div class="container">
-   <div class="row">
+   <div class="row wrapper2">
       <div class="col-md-4">
-         <div class="icon6"><i class="ion-ios-navigate"></i></div>
-         <h4>Lorem ipsum dolor sit.</h4>
+         <div class="icon6"><i class="icon-mail"></i></div>
+         <h4>Any Questions?</h4>
          <h5>ask@medical.com</h5> </div>
       <div class="col-md-4">
-         <div class="icon6"><i class="ion-ios-navigate"></i></div>
-         <h4>Lorem ipsum dolor sit.</h4>
-         <h5>ask@medical.com</h5></div>
+         <div class="icon6"><i class="icon-chat-empty"></i></div>
+         <h4>Call Us</h4>
+         <h5>+51 324 342 342</h5></div>
       <div class="col-md-4">
-         <div class="icon6"><i class="ion-ios-navigate"></i></div>
-         <h4>Lorem ipsum dolor sit.</h4>
-         <h5>ask@medical.com</h5></div>
+         <div class="icon6"><i class="icon-right-outline"></i></div>
+         <h4>Adress</h4>
+         <h5>325 W Valley Dr,<br> Kalispell, MT, 59901 </h5></div>
    </div>
 </div>
 
 
       <!--       section       -->
-
-     <div class="container-fluid">
+<section class="form">
+     <div class="container">
 <div class="row">
            <div class="col-md-4">
               <h2>Lorem ipsum dolor.</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reprehenderit, nihil, assumenda! Deleniti exercitationem commodi odit.</p>
               <h5>Lorem ipsum dolor sit amet.</h5>
-              <ul class="socialmedia4">
-                 <li></li>
-                 <li></li>
-                 <li></li>
-                 <li></li>
-                 <li></li>
+              <ul class="socialicons6">
+                 <li><i class="icon-facebook"></i></li>
+                 <li><i class="icon-twitter"></i></li>
+                 <li><i class="icon-gplus"></i></li>
+                 <li><i class="icon-linkedin"></i></li>
               </ul>
            </div>
            <div class="col-md-8">
@@ -114,13 +119,14 @@
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                  </div>
                  <div class="form-group">
-                    <label for="exampleInputPassword1">Password</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                    <label for="exampleInputPassword1">Subject</label>
+                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Subject">
                  </div>
                  <div class="form-group">
                     <label for="exampleTextarea">Example textarea</label>
                     <textarea class="form-control" id="exampleTextarea" rows="3"></textarea>
                  </div>
+                 <h6 class="small">*Lorem ipsum dolor sit amet.</h6>
                  <div class="form-check">
                     <label class="form-check-label">
                        <input type="checkbox" class="form-check-input">
@@ -136,6 +142,7 @@
         </div>
      </div>
 
+      </section>
 
 
 
@@ -149,26 +156,25 @@
 
 
 
-
-
-      <div class="container-fluid">
-         <div class="row">
-            <div class="col-md-9"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, commodi!</p></div>
-            <div class="col-md-9">
-               <ul class="socialmedia3">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-               </ul>
+      <footer>
+         <div class="container-fluid">
+            <div class="row">
+               <div class="col-md-5"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span>Culpa, commodi!</span></p></div>
+               <div class="col-md-4">
+                  <ul class="socialmedia3">
+                     <li><i class="icon-facebook"></i></li>
+                     <li><i class="icon-gplus"></i></li>
+                     <li><i class="icon-youtube"></i></li>
+                     <li><i class="icon-twitter"></i></li>
+                     <li><i class="icon-vimeo"></i></li>
+                     <li><i class="icon-pinterest"></i></li>
+                     <li><i class="icon-linkedin"></i></li>
+                  </ul>
+               </div>
             </div>
          </div>
-      </div>
 
+      </footer>
 
 
 
