--- a/offer.html
+++ b/offer.html
@@ -8,183 +8,194 @@
       <!--    CSS   -->
       <link rel="stylesheet" href="css/bootstrap.css">
       <link rel="stylesheet" href="css/style.css">
-      <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
+      <link rel="stylesheet" href="css/fontello.css">
+      <link rel="stylesheet" href="css/reset.css">
+      <link href="https://fonts.googleapis.com/css?family=Lato:300,400|Roboto:300,400" rel="stylesheet">
       <title>Medical HTML Theme</title>
    </head>
 
    <body>
-      <!--       header      -->
+
+
+
       <div class="jumbotron">
          <div class="container">
             <div class="col-md-12">
                <div class="row">
-                  <div class="col-md-1">
-                     <p>Have any questions?</p>
+                  <div class="col-md-9">
+                     <ul class="contactbar">
+                        <li><h6 class="small">Have any questions?</h6></li>
+                        <li><h6 class="small"><i class="icon-phone"></i> <span>+43 435 345 234</span></h6></li>
+                        <li><h6 class="small"><i class="icon-mail"></i> <span>ask@medical.com</span></h6></li>
+                     </ul>
                   </div>
-                  <div class="col-md-1">
-                     <p>+43 433 234 345</p>
-                  </div>
-                  <div class="col-md-1">
-                     <p>askanything@medica.com</p>
-                  </div>
-                  <div class="col-md-5"></div>
-                  <div class="col-md-4">
+
+
+
+
+                  <div class="col-md-3 social">
                      <ul class="socialmedia">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li><i class="icon-facebook"></i></li>
+                        <li><i class="icon-gplus"></i></li>
+                        <li><i class="icon-youtube"></i></li>
+                        <li><i class="icon-twitter"></i></li>
+                        <li><i class="icon-vimeo"></i></li>
+                        <li><i class="icon-pinterest"></i></li>
+                        <li><i class="icon-linkedin"></i></li>
                         <li></li>
                      </ul>
                   </div>
                </div>
             </div>
             <nav class="navbar navbar-toggleable-md navbar-light bg-faded">
-               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#">North Medica</a>
+               <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button> <a class="navbar-brand" href="#"><img src="img/logo.JPG" alt="">&nbsp;North Medica</a>
                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav mr-auto mt-2 mt-md-0">
                      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
                      <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
-                     <li class="nav-item"> <a class="nav-link disabled" href="#">Disabled</a> </li>
+                     <li class="nav-item"> <a class="nav-link" href="#">Disabled</a> </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
                      <input class="form-control mr-sm-2" type="text" placeholder="Search">
-                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                     <button class="btn btn-outline my-2 my-sm-0" type="submit">Search</button>
                   </form>
                </div>
             </nav>
-            <div class="row">
-               <div class="col-md-2">
-                  <h2>About</h2></div>
-               <div class="col-md-2">Home / About Us </div>
-               <div class="col-md-8"></div>
-            </div>
          </div>
+          <section class="breadcrumbrs">
+                 <div class="row">
+                  <div class="col-md-2">
+                     <h2>About</h2></div>
+                  <div class="col-md-2">Home / About Us </div>
+                  <div class="col-md-8"></div>
+               </div>
+            </section>
+
       </div>
       <!--       /header      -->
 
 
 
       <!--       section       -->
-
+<section class="offer1">
 
 <div class="container">
    <div class="row">
-      <div class="col-md-4"> <i class="ion-ios-pulse-strong"></i> </div>
+      <div class="col-md-4"> <i class="icon-ambulance"></i> </div>
       <div class="col-md-8">
          <h2>Medication</h2>
          <h3>Lorem ipsum dolor sit amet.</h3>
          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolores quisquam consectetur asperiores nisi, provident fugiat eligendi laborum rem odit? Provident, sit. Veritatis cupiditate totam hic laboriosam nostrum distinctio modi, beatae esse minus dicta similique quas laborum temporibus et tempora ipsam! Eligendi, commodi, odio.</p>
          <ul class="list1">
-            <li></li>
-            <li></li>
-            <li></li>
+            <li><i class="icon-check"></i>Lorem ipsum dolor sit amet.</li>
+            <li><i class="icon-check"></i>Lorem ipsum dolor sit amet.</li>
+            <li><i class="icon-check"></i>Lorem ipsum dolor sit amet.</li>
          </ul>
          <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-secondary"><i class="ion-ios-world"></i></button>
+            <button type="button" class="btn btn-secondary"><i class="icon-link-1"></i></button>
             <button type="button" class="btn btn-secondary">Read more</button>
          </div>
       </div>
    </div>
 </div>
-
-
-
-      <!--       section       -->
-
-
-    <div class="container">
-   <div class="row">
-      <div class="col-md-4"> <i class="ion-ios-pulse-strong"></i> </div>
-      <div class="col-md-8">
-         <h2>Medication</h2>
-         <h3>Lorem ipsum dolor sit amet.</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolores quisquam consectetur asperiores nisi, provident fugiat eligendi laborum rem odit? Provident, sit. Veritatis cupiditate totam hic laboriosam nostrum distinctio modi, beatae esse minus dicta similique quas laborum temporibus et tempora ipsam! Eligendi, commodi, odio.</p>
-         <ul class="list1">
-            <li></li>
-            <li></li>
-            <li></li>
-         </ul>
-         <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-secondary"><i class="ion-ios-world"></i></button>
-            <button type="button" class="btn btn-secondary">Read more</button>
-         </div>
-      </div>
-   </div>
-</div>
-
+      </section>
 
 
       <!--       section       -->
 
-    <div class="container">
-   <div class="row">
-      <div class="col-md-4"> <i class="ion-ios-pulse-strong"></i> </div>
-      <div class="col-md-8">
-         <h2>Medication</h2>
-         <h3>Lorem ipsum dolor sit amet.</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolores quisquam consectetur asperiores nisi, provident fugiat eligendi laborum rem odit? Provident, sit. Veritatis cupiditate totam hic laboriosam nostrum distinctio modi, beatae esse minus dicta similique quas laborum temporibus et tempora ipsam! Eligendi, commodi, odio.</p>
-         <ul class="list1">
-            <li></li>
-            <li></li>
-            <li></li>
-         </ul>
-         <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-secondary"><i class="ion-ios-world"></i></button>
-            <button type="button" class="btn btn-secondary">Read more</button>
-         </div>
-      </div>
-   </div>
-</div>
-
-
-
-      <!--       section       -->
-
-
-  <div class="container">
-   <div class="row">
-      <div class="col-md-4"> <i class="ion-ios-pulse-strong"></i> </div>
-      <div class="col-md-8">
-         <h2>Medication</h2>
-         <h3>Lorem ipsum dolor sit amet.</h3>
-         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolores quisquam consectetur asperiores nisi, provident fugiat eligendi laborum rem odit? Provident, sit. Veritatis cupiditate totam hic laboriosam nostrum distinctio modi, beatae esse minus dicta similique quas laborum temporibus et tempora ipsam! Eligendi, commodi, odio.</p>
-         <div class="btn-group" role="group" aria-label="Basic example">
-            <button type="button" class="btn btn-secondary"><i class="ion-ios-world"></i></button>
-            <button type="button" class="btn btn-secondary">Read more</button>
-         </div>
-      </div>
-   </div>
-</div>
-
-
-      <!--       section       -->
-
-
-
-
-
-
-      <div class="container-fluid">
-         <div class="row">
-            <div class="col-md-9"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Culpa, commodi!</p></div>
-            <div class="col-md-9">
-               <ul class="socialmedia3">
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-               </ul>
+<section class="offer2">
+       <div class="container">
+      <div class="row">
+         <div class="col-md-4"> <i class="icon-heart"></i> </div>
+         <div class="col-md-8">
+            <h2>Medication</h2>
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolores quisquam consectetur asperiores nisi, provident fugiat eligendi laborum rem odit? Provident, sit. Veritatis cupiditate totam hic laboriosam nostrum distinctio modi, beatae esse minus dicta similique quas laborum temporibus et tempora ipsam! Eligendi, commodi, odio.</p>
+            <ul class="list1">
+               <li><i class="icon-right-open"></i>Lorem ipsum dolor sit.</li>
+               <li><i class="icon-right-open"></i>Lorem ipsum dolor sit.</li>
+               <li><i class="icon-right-open"></i>Lorem ipsum dolor sit.</li>
+            </ul>
+            <div class="btn-group" role="group" aria-label="Basic example">
+               <button type="button" class="btn btn-secondary"><i class="icon-link-1"></i></button>
+               <button type="button" class="btn btn-secondary">Read more</button>
             </div>
          </div>
       </div>
+   </div>
+   </section>
+
+
+      <!--       section       -->
+
+<section class="offer3"><div class="container">
+          <div class="row">
+         <div class="col-md-4"> <i class="icon-eye"></i> </div>
+         <div class="col-md-8">
+            <h2>Medication</h2>
+            <h3><span>Lorem ipsum dolor sit amet.</span></h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolores quisquam consectetur asperiores nisi, provident fugiat eligendi laborum rem odit? Provident, sit. Veritatis cupiditate totam hic laboriosam nostrum distinctio modi, beatae esse minus dicta similique quas laborum temporibus et tempora ipsam! Eligendi, commodi, odio.</p>
+            <ul class="list1">
+               <li><i class="icon-star"></i>Lorem ipsum dolor sit amet.</li>
+               <li><i class="icon-star"></i>Lorem ipsum dolor sit amet.</li>
+               <li><i class="icon-star"></i>Lorem ipsum dolor sit amet.</li>
+            </ul>
+            <div class="btn-group" role="group" aria-label="Basic example">
+               <button type="button" class="btn btn-secondary"><i class="icon-link-1"></i></button>
+               <button type="button" class="btn btn-secondary">Read more</button>
+            </div>
+         </div>
+          </div>
+       </div>
+       </section>
+
+
+      <!--       section       -->
+
+
+ <section class="offer4">
+      <div class="container">
+      <div class="row">
+         <div class="col-md-4"> <i class="icon-chat-empty"></i> </div>
+         <div class="col-md-8">
+            <h2>Medication</h2>
+            <h3>Lorem ipsum dolor sit amet.</h3>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores dolores quisquam consectetur asperiores nisi, provident fugiat eligendi laborum rem odit? Provident, sit. Veritatis cupiditate totam hic laboriosam nostrum distinctio modi, beatae esse minus dicta similique quas laborum temporibus et tempora ipsam! Eligendi, commodi, odio.</p>
+            <div class="btn-group" role="group" aria-label="Basic example">
+               <button type="button" class="btn btn-secondary"><i class="icon-link-1"></i></button>
+               <button type="button" class="btn btn-secondary">Read more</button>
+            </div>
+         </div>
+      </div>
+     </div>
+  </section>
+
+
+      <!--       section       -->
+
+
+
+
+
+      <footer>
+         <div class="container-fluid">
+            <div class="row">
+               <div class="col-md-5"><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. <span>Culpa, commodi!</span></p></div>
+               <div class="col-md-4">
+                  <ul class="socialmedia3">
+                     <li><i class="icon-facebook"></i></li>
+                     <li><i class="icon-gplus"></i></li>
+                     <li><i class="icon-youtube"></i></li>
+                     <li><i class="icon-twitter"></i></li>
+                     <li><i class="icon-vimeo"></i></li>
+                     <li><i class="icon-pinterest"></i></li>
+                     <li><i class="icon-linkedin"></i></li>
+                  </ul>
+               </div>
+            </div>
+         </div>
+
+      </footer>
 
 
 
